fixed tooltips and spacing

--- a/irene/css/asiaam.css
+++ b/irene/css/asiaam.css
@@ -111,10 +111,12 @@ p {
 .grid_contain_treescat {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: auto 1fr;
   justify-items: center;
   text-align: center;
+  row-gap: 70px;
 }
+
 
 .treescatsub {
   font-size: 20px;
@@ -191,7 +193,7 @@ img {
 }
 
 .triangle_image {
-  max-width: 180%;
+  max-width: 60%;
   height: auto;
   text-align: left;
 }
@@ -247,12 +249,14 @@ img {
   position: absolute;
 }
 
+/* Code for race triangle */
 .racetrianglegrid {
-  display: block;
+  display: grid;
+  grid-template-columns: 1fr 1.5fr 1fr;
 }
 
 .racetriangle {
-  max-width: 60%;
+  max-width: 100%;
   position: relative;
   display: block;
   justify-content: center;
@@ -260,22 +264,21 @@ img {
 }
 
 .centersvg {
-  display: flex;
-  margin: auto;
-}
+width: 110%; }  
 
 #show-tooltip-0,
 #show-tooltip-1,
 #show-tooltip-2 {
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   background-color: #69b3a2;
-  opacity: 90%;
+  opacity: 100%;
   color: white;
-  font-size: 13px;
+  font-size: 14px;
   padding: 2%;
   border-radius: 5px;
-bottom: 105%;
+  width: 600px;
+/* bottom: 105%; */
 
   
 
